# predictBuild0202

./: .gitignore  main.py  pyproject.toml  run.bat
.specify/: README.md  constitution.md  plan.md  tasks.md
data/: terminology.yaml
outputs/: 갈전7교_자동생성_총괄집계표.xlsx
src/quantity_aggregator/ai/: claude_client.py
src/quantity_aggregator/core/: aggregator.py  normalizer.py  parser.py  reporter.py
src/quantity_aggregator/ui/: app.py
tests/fixtures/galjeon7/: 00 갈전7교 총괄수량집계표.xlsx  01 갈전7교 일반수량 산출서.xlsx  02 갈전7교 토공수량 산출서.xlsx  03. 갈전7교 가축도공 수량산출서.xlsx  04 갈전7교 가시설공(251208).xlsx  05 갈전7교 지반개량공수량산출서.xlsx
